[package]
name = "tokio-tcpstream-with-busy-estab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.2.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.9.0"
tokio = { version = "1",  features = ["full","tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.crates-io]
tokio = { path = "./tokio/tokio", package = "tokio" }
